# tpl-lang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  example  example.tpl  output
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement.yml  update.yml
.github/workflows/: build.yml  rust.yml  test.yml  tests.yml
examples/: bin_operations.tpl  bool.tpl  fibonacci.tpl  foo.tpl  for_loop.tpl  if_else.tpl  imports.tpl  strings.tpl
tpl-ir/: Cargo.toml
tpl-ir/src/: builtin.rs  error.rs  function.rs  import.rs  lib.rs  libc.rs  variable.rs
tpl-lexer/: Cargo.toml
tpl-lexer/src/: error.rs  lib.rs  macros.rs  token.rs  token_type.rs
tpl-lexer/tests/: error_handling.rs  identifiers.rs  numbers.rs  strings.rs
tpl-parser/: Cargo.toml
tpl-parser/src/: error.rs  expressions.rs  lib.rs  statements.rs  value.rs
tplc/: Cargo.toml
tplc/src/: compiler.rs  greeting.rs  main.rs
