[package]
name = "tpl-ir"
edition = "2021"
description = "IR Generator for TPL Language"
version.workspace = true
authors.workspace = true

[dependencies]
tpl-lexer = { path = "../tpl-lexer" }
tpl-parser = { path = "../tpl-parser" }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
colored = "2.1.0"

[build-dependencies]
llvm-sys = "180.0.0"
