[package]
name = "tplc"
version.workspace = true
authors.workspace = true
description = "Main Compiler Module for TPL Language"
edition = "2021"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
tpl-lexer = { path = "../tpl-lexer" }
tpl-parser = { path = "../tpl-parser" }
tpl-ir = { path = "../tpl-ir" }
